--- a/calc.ui
+++ b/calc.ui
@@ -1954,7 +1954,7 @@ background-color:rgb(39, 255, 24);
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>240</y>
+     <y>243</y>
      <width>201</width>
      <height>25</height>
     </rect>
@@ -1987,6 +1987,12 @@ background-color:rgb(39, 255, 24);
    </property>
    <property name="focusPolicy">
     <enum>Qt::NoFocus</enum>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+
+</string>
    </property>
    <property name="minimum">
     <number>2</number>
